# vhit-robot-rev1-demo

./: .gitignore  README.md  build-workspace.sh  vhit_robot_demo.repos  vhit_robotics_rev_1robot_group_baseflange_5000_1.000000_1.000000.ikcache
scripts/: run-demo.sh  run-test.sh  setup-env.sh
snap/: snapcraft.yaml
src/vhit_elac_tester/: README.md  package.xml  setup.cfg  setup.py
src/vhit_elac_tester/config/: elac_tester.urdf.xacro  elac_tester_mock.urdf.xacro  ros2_controllers.yaml
src/vhit_elac_tester/launch/: elac_tester.launch.py
src/vhit_elac_tester/vhit_elac_tester/: elac_tester_node.py
src/vhit_passthrough_controller/: CMakeLists.txt  README.md  package.xml  vhit_passthrough_controller.xml
src/vhit_passthrough_controller/include/vhit_passthrough_controller/: vhit_passthrough_controller.hpp
src/vhit_passthrough_controller/src/: vhit_passthrough_controller.cpp
src/vhit_passthrough_controller/test/: test_load_vhit_passthrough_controller.CPP
src/vhit_robot_demo/: CMakeLists.txt  README.md  package.xml
src/vhit_robot_demo/launch/: demo.launch.py  headless.launch.py  rviz.launch.py
src/vhit_robot_demo/meshes/: arm1.part  arm1.stl  arm2.part  arm2.stl  base.part  base.stl  case_mot.part  case_mot.stl  case_ventosa.part  case_ventosa.stl  cover__configuration_default.part  cover__configuration_default.stl  cover__configuration_forearm.part  cover__configuration_forearm.stl  elac214_f.part  elac214_f.stl  elac217_b.part  elac217_b.stl  elac217_f.part  elac217_f.stl  flange.part  flange.stl  forearm.part  forearm.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl  plate.part  plate.stl  pompa.part  pompa.stl  shoulder.part  shoulder.stl  tubo_curvo__configuration_default.part  tubo_curvo__configuration_default.stl  tubo_curvo__configuration_dritto.part  tubo_curvo__configuration_dritto.stl  tubo_curvo__configuration_due.part  tubo_curvo__configuration_due.stl  (+6 more)
src/vhit_robot_demo/rviz/: rviz_config.rviz
src/vhit_robot_demo/urdf/: vhit_robotics_rev_1.gazebo.xacro  vhit_robotics_rev_1.ros2_control.xacro  vhit_robotics_rev_1.urdf  vhit_robotics_rev_1.urdf.xacro
src/vhit_robot_demo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/vhit_robot_demo_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  vhit_robotics_rev_1.srdf  vhit_robotics_rev_1.urdf.xacro
src/vhit_robot_demo_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/vhit_robot_driver/: CMakeLists.txt  README.md  input_map.json  output_map.json  package.xml  vhit_robot_hardware_interface_plugin.xml
src/vhit_robot_driver/include/: ctrlx_datalayer_helper.h  datalayer_type.hpp  shared_memory_helper.hpp
src/vhit_robot_driver/include/vhit_robot_driver/: vhit_robot_hardware_interface.hpp
src/vhit_robot_driver/src/: shared_memory_helper.cpp  vhit_robot_hardware_interface.cpp
src/vhit_robot_driver/test/: rt_config_test.sh  test_load_vhit_robot_driver.cpp
src/vhit_robot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/vhit_robot_moveit_config/config/: elac_mapping.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  vhit_robotics_rev_1.gazebo.xacro  vhit_robotics_rev_1.ros2_control.xacro  vhit_robotics_rev_1.srdf  vhit_robotics_rev_1.urdf.xacro
src/vhit_robot_moveit_config/launch/: demo.launch.py  headless.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
